--- a/package.json
+++ b/package.json
@@ -1,15 +1,38 @@
 {
-  "name": "nash-chart",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "10.0.5",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
-  }
+    "name": "nash-chart",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "postbuild": "next-on-netlify"
+    },
+    "dependencies": {
+        "@hookform/error-message": "0.0.5",
+        "@hookform/resolvers": "^1.3.0",
+        "axios": "^0.21.1",
+        "bootstrap": "^4.5.3",
+        "dotenv": "^8.2.0",
+        "firebase": "^8.2.3",
+        "firebase-admin": "^9.4.2",
+        "js-cookie": "^2.2.1",
+        "next": "10.0.5",
+        "next-on-netlify": "^2.8.4",
+        "next-redux-wrapper": "^6.0.2",
+        "nookies": "^2.5.1",
+        "react": "17.0.1",
+        "react-bootstrap": "^1.4.3",
+        "react-dom": "17.0.1",
+        "react-firebaseui": "^4.1.0",
+        "react-hook-form": "^6.14.2",
+        "react-redux": "^7.2.2",
+        "redux": "^4.0.5",
+        "redux-devtools-extension": "^2.13.8",
+        "redux-persist": "^6.0.0",
+        "redux-saga": "^1.1.3",
+        "redux-thunk": "^2.3.0",
+        "sass": "^1.32.4",
+        "vest": "^3.0.1"
+    }
 }
