--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build",
-        "start": "next start",
-        "postbuild": "next-on-netlify"
+        "start": "next start"
     },
     "dependencies": {
         "@hookform/error-message": "0.0.5",
