--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "dependencies": {
         "@hookform/error-message": "0.0.5",
         "@hookform/resolvers": "^1.3.0",
+        "apollo-server-lambda": "^2.19.2",
+        "aws-sdk": "^2.830.0",
         "axios": "^0.21.1",
         "bootstrap": "^4.5.3",
         "dotenv": "^8.2.0",
         "firebase": "^8.2.3",
         "firebase-admin": "^9.4.2",
-        "js-cookie": "^2.2.1",
+        "graphql": "^15.4.0",
         "next": "10.0.5",
         "next-redux-wrapper": "^6.0.2",
-        "nookies": "^2.5.1",
         "react": "17.0.1",
         "react-bootstrap": "^1.4.3",
         "react-dom": "17.0.1",
@@ -31,6 +32,8 @@
         "redux-saga": "^1.1.3",
         "redux-thunk": "^2.3.0",
         "sass": "^1.32.4",
+        "sharp": "^0.27.0",
+        "util": "^0.12.3",
         "vest": "^3.0.1"
     }
 }
