--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
         "aws-sdk": "^2.830.0",
         "axios": "^0.21.1",
         "bootstrap": "^4.5.3",
+        "cloudinary-core": "^2.11.3",
+        "cloudinary-react": "^1.6.8",
+        "deepmerge": "^4.2.2",
         "dotenv": "^8.2.0",
         "firebase": "^8.2.3",
         "firebase-admin": "^9.4.2",
@@ -23,7 +26,7 @@
         "react": "17.0.1",
         "react-bootstrap": "^1.4.3",
         "react-dom": "17.0.1",
-        "react-firebaseui": "^4.1.0",
+        "react-dropzone": "^11.2.4",
         "react-hook-form": "^6.14.2",
         "react-redux": "^7.2.2",
         "redux": "^4.0.5",
